--- a/app/src/main/res/layout/fragment_add_restaurant.xml
+++ b/app/src/main/res/layout/fragment_add_restaurant.xml
@@ -20,13 +20,13 @@
             android:ems="10"
             android:hint="name..."
             android:inputType="text"
-            app:layout_constraintBottom_toTopOf="@+id/ivCarAddCarFragment"
+            app:layout_constraintBottom_toTopOf="@+id/ivupload"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/ivCarAddCarFragment"
+            android:id="@+id/ivupload"
             android:layout_width="100dp"
             android:layout_height="0dp"
             android:layout_marginBottom="104dp"
