--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -13,22 +13,22 @@
 
         <ImageView
             android:id="@+id/DetailedCar"
-            android:layout_width="352dp"
-            android:layout_height="0dp"
+            android:layout_width="307dp"
+            android:layout_height="246dp"
             android:layout_marginStart="23dp"
             android:layout_marginTop="70dp"
             android:layout_marginEnd="23dp"
             android:layout_marginBottom="175dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/carplain"
+
             app:layout_constraintBottom_toTopOf="@+id/DetailedMan"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.461"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:shapeAppearance="@style/RoundShape.App.8percent" />
+            app:layout_constraintVertical_bias="0.0"/>
+
 
         <TextView
             android:id="@+id/DetailedPhone"
@@ -74,11 +74,17 @@
             android:id="@+id/tvadress"
             android:layout_width="215dp"
             android:layout_height="40dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginTop="41dp"
+            android:layout_marginEnd="101dp"
+            android:layout_marginBottom="46dp"
             android:text="address"
             android:textAlignment="center"
             android:textSize="16sp"
-            tools:layout_editor_absoluteX="101dp"
-            tools:layout_editor_absoluteY="383dp"
+            app:layout_constraintBottom_toTopOf="@+id/tvdescreption"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/DetailedCar"
             tools:ignore="MissingConstraints" />
 
 
