--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,67 +15,60 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="101dp"
-            android:layout_marginBottom="69dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="72dp"
             android:ems="10"
             android:hint="Email...."
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/etPasswordLogin"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/etPasswordLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:layout_marginEnd="100dp"
+            android:layout_marginBottom="76dp"
             android:ems="10"
             android:hint="Password..."
             android:inputType="textPassword"
             android:minHeight="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/etButtomLogin"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/etUsernameLogin"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etUsernameLogin" />
 
         <Button
             android:id="@+id/etButtomLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="46dp"
-            android:layout_marginBottom="308dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="44dp"
             android:text="Login"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tvForgotPasswordLinkLogin"
+            app:layout_constraintStart_toStartOf="@+id/tvForgotPasswordLinkLogin"
             app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />
 
         <TextView
             android:id="@+id/tvSignupLinkLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="187dp"
-            android:layout_marginTop="212dp"
-            android:layout_marginEnd="20dp"
+            android:layout_width="112dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="87dp"
             android:text="Signup"
-            app:layout_constraintEnd_toEndOf="@+id/etButtomLogin"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etButtomLogin" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/floatinglogin"
+            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLinkLogin" />
 
         <TextView
             android:id="@+id/tvForgotPasswordLinkLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="179dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="13dp"
             android:layout_marginBottom="149dp"
             android:text="ForgotPassword"
             app:layout_constraintBottom_toTopOf="@+id/tvSignupLinkLogin"
-            app:layout_constraintEnd_toEndOf="@+id/etButtomLogin"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etButtomLogin" />
 
