--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -14,108 +14,119 @@
             android:id="@+id/etUsernameSignup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="172dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="20dp"
             android:ems="10"
             android:hint="Email..."
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/etPasswordSignup"
+            app:layout_constraintEnd_toEndOf="@+id/etLastname"
+            app:layout_constraintTop_toBottomOf="@+id/etLastname" />
 
         <EditText
             android:id="@+id/etPasswordSignup"
             android:layout_width="208dp"
-            android:layout_height="53dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="100dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="6dp"
             android:ems="10"
             android:hint="password..."
             android:inputType="textPassword"
             android:minHeight="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/ethobbies"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/etUsernameSignup"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etUsernameSignup" />
 
         <Button
             android:id="@+id/etButtonSignup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="152dp"
+            android:layout_marginTop="46dp"
             android:text="Signup"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="430dp"
-            android:layout_marginEnd="298dp"
-            android:layout_marginBottom="28dp"
-            android:text="back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPasswordSignup" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etLivingPlace" />
 
         <EditText
             android:id="@+id/etName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="99dp"
-            android:layout_marginEnd="103dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="16dp"
             android:ems="10"
             android:hint="Name.."
             android:inputType="text"
+            app:layout_constraintBottom_toTopOf="@+id/etLastname"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="50dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/ethobbies"
-            android:layout_width="205dp"
-            android:layout_height="47dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="29dp"
             android:ems="10"
             android:hint="hobbies.."
             android:inputType="text"
-            tools:layout_editor_absoluteX="105dp"
-            tools:layout_editor_absoluteY="299dp" />
+            app:layout_constraintBottom_toTopOf="@+id/etPhone"
+            app:layout_constraintEnd_toEndOf="@+id/etLivingPlace"
+            app:layout_constraintStart_toStartOf="@+id/etPasswordSignup"
+            app:layout_constraintTop_toBottomOf="@+id/etPasswordSignup" />
 
         <EditText
             android:id="@+id/etLivingPlace"
-            android:layout_width="206dp"
-            android:layout_height="51dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="134dp"
             android:ems="10"
             android:hint="living Place.."
             android:inputType="text"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="434dp" />
+            app:layout_constraintBottom_toTopOf="@+id/back"
+            app:layout_constraintEnd_toEndOf="@+id/etPhone"
+            app:layout_constraintStart_toStartOf="@+id/etLastname"
+            app:layout_constraintTop_toBottomOf="@+id/etPhone" />
 
         <EditText
             android:id="@+id/etLastname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:layout_marginBottom="16dp"
             android:ems="10"
             android:hint="Lastname.."
             android:inputType="text"
-            tools:layout_editor_absoluteX="100dp"
-            tools:layout_editor_absoluteY="111dp" />
+            app:layout_constraintBottom_toTopOf="@+id/etUsernameSignup"
+            app:layout_constraintStart_toStartOf="@+id/etName"
+            app:layout_constraintTop_toBottomOf="@+id/etName" />
 
         <EditText
             android:id="@+id/etPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="108dp"
-            android:layout_marginEnd="94dp"
+            android:layout_marginBottom="14dp"
             android:ems="10"
             android:hint="phone.."
             android:inputType="phone"
+            app:layout_constraintBottom_toTopOf="@+id/etLivingPlace"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="375dp" />
+            app:layout_constraintTop_toBottomOf="@+id/ethobbies" />
+
+        <Button
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="35dp"
+            android:layout_marginBottom="64dp"
+            android:text="back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etLivingPlace" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
