--- a/app/src/main/res/layout/rest_item.xml
+++ b/app/src/main/res/layout/rest_item.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="150dp">
 
     <ImageView
-        android:id="@+id/imPhoto"
+        android:id="@+id/ivPhoto"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_weight="1"
