TODO fix the addHotel (Photo problems)

--- a/app/src/main/res/layout/fragment_add_restaurant.xml
+++ b/app/src/main/res/layout/fragment_add_restaurant.xml
@@ -20,6 +20,7 @@
             android:ems="10"
             android:hint="name..."
             android:inputType="text"
+            android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/ivupload"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +58,7 @@
             android:ems="10"
             android:hint="address..."
             android:inputType="text|textPostalAddress"
+            android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/etPhoneAddRestaurantFragment"
             app:layout_constraintStart_toStartOf="@+id/etDescAddRestaurantFragment"
             app:layout_constraintTop_toBottomOf="@+id/etDescAddRestaurantFragment" />
@@ -69,6 +71,7 @@
             android:ems="10"
             android:hint="phone..."
             android:inputType="phone"
+            android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/btnAddAddRestaurantFragment"
             app:layout_constraintStart_toStartOf="@+id/etAddressAddRestaurantFragment"
             app:layout_constraintTop_toBottomOf="@+id/etAddressAddRestaurantFragment" />
@@ -78,6 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="249dp"
+            android:backgroundTint="#6F7F8F"
             android:text="Add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +96,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="13dp"
+            android:backgroundTint="#6F7F8F"
             android:text="back"
             app:layout_constraintBottom_toTopOf="@+id/etNameAddRestaurantFragment"
             app:layout_constraintEnd_toStartOf="@+id/etNameAddRestaurantFragment"
