--- a/app/src/main/res/layout/fragment_all_restaurants.xml
+++ b/app/src/main/res/layout/fragment_all_restaurants.xml
@@ -25,6 +25,7 @@
         android:layout_marginBottom="30dp"
         android:clickable="true"
         android:src="@android:drawable/btn_plus"
+        app:backgroundTint="#6F7F8F"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="26dp"
+        android:backgroundTint="#6F7F8F"
         android:text="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
