--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -55,10 +55,9 @@
             android:id="@+id/tvSignupLinkLogin"
             android:layout_width="112dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginBottom="87dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="72dp"
             android:text="Signup"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/floatinglogin"
             app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLinkLogin" />
 
@@ -77,8 +76,8 @@
             android:id="@+id/floatinglogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="21dp"
-            android:layout_marginBottom="29dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="656dp"
             android:clickable="true"
             android:src="@android:drawable/btn_plus"
             app:backgroundTint="#6F7F8F"
