--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,6 +35,23 @@
             android:minHeight="48dp" />
 
         <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="email.."
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp" />
+
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:ems="10"
+            android:hint="password..."
+            android:inputType="textPassword" />
+
+        <EditText
             android:id="@+id/etAddressUserDetailsEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,7 +83,7 @@
             android:layout_width="207dp"
             android:layout_height="wrap_content"
             android:backgroundTint="#6F7F8F"
-            android:text="UPDATE"/>
+            android:text="UPDATE" />
     </LinearLayout>
 
 </FrameLayout>
