--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/action_profile"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile" />
+    <item
         android:id="@+id/action_home"
         android:title="Home"
         android:icon="@drawable/ic_home"/>
@@ -9,10 +13,7 @@
         android:id="@+id/action_add"
         android:title="Add"
         android:icon="@drawable/ic_add" />
-    <item
-        android:id="@+id/action_search"
-        android:title="Search"
-        android:icon="@drawable/ic_search" />
+
     <!--
     <item
         android:id="@+id/action_profile"
