--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/top_backgroun_profile"
+    android:backgroundTint="#3EFFFFFF"
     tools:context=".SignupFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/ivLogoUserDetailsEdit"
             android:layout_width="126dp"
@@ -74,7 +77,7 @@
             android:id="@+id/ivUserUserDetailsEdit"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:src="@drawable/ic_profile"/>
+            android:src="@drawable/ic_profile" />
 
         <!-- android:srcCompat="@android:mipmap/sym_def_app_icon"/> -->
 
