--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -30,25 +30,26 @@
             android:id="@+id/btnSignupSignup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="92dp"
-            android:layout_marginBottom="42dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="17dp"
             android:backgroundTint="#6F7F8F"
             android:text="SIGNUP"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivPhotoSignupFragment"
-            app:layout_constraintTop_toBottomOf="@+id/ivPhotoSignupFragment" />
+            app:layout_constraintTop_toBottomOf="@+id/ivPhotoSignupFragment"
+            app:layout_constraintVertical_bias="0.625" />
 
         <ImageView
             android:id="@+id/ivPhotoSignupFragment"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginStart="101dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="38dp"
+            android:layout_marginStart="152dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="159dp"
             android:background="@drawable/ic_add"
             android:src="@drawable/top_backgroun_profile"
-            app:layout_constraintEnd_toStartOf="@+id/btnSignupSignup"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etAddressSignupFragment" />
 
@@ -125,23 +126,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="76dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="48dp"
             android:ems="10"
             android:hint="address..."
             android:inputType="text"
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/ivPhotoSignupFragment"
             app:layout_constraintEnd_toEndOf="@+id/etPhoneSignupFragment"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/ivPhotoSignupFragment"
             app:layout_constraintTop_toBottomOf="@+id/etPhoneSignupFragment" />
 
         <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="648dp"
+            android:layout_width="92dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="16dp"
             android:backgroundTint="#6F7F8F"
             android:text="back"
             app:layout_constraintBottom_toBottomOf="parent"
