--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnfav1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="77dp"
